// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Radio component renders a disabled radio button 1`] = `
.sxv00ei {
  align-items: center;
  -webkit-appearance: none;
  appearance: none;
  background-color: transparent;
  border: 1px solid var(--sx-colors-tonal300);
  border-radius: var(--sx-radii-round);
  cursor: pointer;
  display: flex;
  justify-content: center;
  padding: 0;
  height: var(--sx-sizes-1);
  width: var(--sx-sizes-1);
  transition: all 50ms ease-out;
}

.sxv00ei:hover {
  outline: none;
}

.sxv00ei:focus {
  outline: none;
}

:checked + .sxv00ei {
  background-color: var(--sx-colors-primary);
  border-color: var(--sx-colors-primary);
}

.sxv00ei[disabled] {
  background-color: var(--sx-colors-tonal100);
  border-color: var(--sx-colors-tonal300);
  cursor: not-allowed;
}

.sxndfzf {
  height: 6px;
  width: 6px;
  border-radius: var(--sx-radii-round);
  background-color: white;
  position: absolute;
}

.sxykmo8 {
  display: flex;
  flex-wrap: wrap;
}

<div>
  <div
    class="sxykmo8"
    role="radiogroup"
  >
    <input
      disabled=""
      hidden=""
      type="radio"
      value="value"
    />
    <button
      aria-checked="false"
      aria-label="disabled indicator"
      class="sxv00ei"
      data-disabled=""
      data-state="unchecked"
      disabled=""
      role="radio"
      tabindex="-1"
      type="button"
      value="value"
    />
  </div>
</div>
`;

exports[`Radio component renders a radio button 1`] = `
.sxv00ei {
  align-items: center;
  -webkit-appearance: none;
  appearance: none;
  background-color: transparent;
  border: 1px solid var(--sx-colors-tonal300);
  border-radius: var(--sx-radii-round);
  cursor: pointer;
  display: flex;
  justify-content: center;
  padding: 0;
  height: var(--sx-sizes-1);
  width: var(--sx-sizes-1);
  transition: all 50ms ease-out;
}

.sxv00ei:hover {
  outline: none;
}

.sxv00ei:focus {
  outline: none;
}

:checked + .sxv00ei {
  background-color: var(--sx-colors-primary);
  border-color: var(--sx-colors-primary);
}

.sxv00ei[disabled] {
  background-color: var(--sx-colors-tonal100);
  border-color: var(--sx-colors-tonal300);
  cursor: not-allowed;
}

.sxndfzf {
  height: 6px;
  width: 6px;
  border-radius: var(--sx-radii-round);
  background-color: white;
  position: absolute;
}

.sxykmo8 {
  display: flex;
  flex-wrap: wrap;
}

<div>
  <div
    class="sxykmo8"
    role="radiogroup"
  >
    <input
      hidden=""
      type="radio"
      value="value"
    />
    <button
      aria-checked="false"
      aria-label="indicator"
      class="sxv00ei"
      data-radix-roving-focus-group-id="radix-id-0-1"
      data-state="unchecked"
      role="radio"
      tabindex="0"
      type="button"
      value="value"
    />
  </div>
</div>
`;
